fix(announcement-cover): z-index

--- a/src/views/Home/Announcements/Carousel/styles.css
+++ b/src/views/Home/Announcements/Carousel/styles.css
@@ -62,6 +62,11 @@ header {
       @mixin object-fit-cover;
     }
 
+    & :global(picture),
+    & :global(img) {
+      z-index: -1;
+    }
+
     & h3 {
       @mixin line-clamp;
 
